# stu_manage_system

./: .gitignore  LICENSE  MySQL_SQL.txt
client/: CMakeLists.txt  account.txt  client_app
client/include/: client_ready.h
client/src/: TcpSocket.cpp  main_client.cpp
server/: CMakeLists.txt  server_app
server/include/: TcpServer.h  TcpSocket.h  my_sql.h  thread_pool.h
server/src/: TcpServer.cpp  main_server.cpp
